--- a/form.html
+++ b/form.html
@@ -86,6 +86,8 @@
                   <option value="2">2 人</option>
                   <option value="3">3 人</option>
                   <option value="4">4 人</option>
+                  <option value="5">5 人</option>
+                  <option value="6">6 人</option>
               </select>
           </div>
             <div class="vegetarian-details">
@@ -96,6 +98,8 @@
                     <option value="2">2 人</option>
                     <option value="3">3 人</option>
                     <option value="4">4 人</option>
+                    <option value="5">5 人</option>
+                    <option value="6">6 人</option>
                 </select>
             </div>
         
